# cv-rag-agent

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
app/: config.py  database.py  main.py
app/agent/: graph.py  tools.py
app/models/: schemas.py
app/routers/: chat.py  search.py  upload.py
app/services/: chunker.py  embeddings.py  extractor.py  parser.py  vector_store.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
docs-claude/: backend-routes.md  plan.md  webui-templates-index.md
